data/derived/fa15/progs/unify/prog3494.ml.out
Characters 14-31:
  let _ = append([1;2;3],[4;5;6]);;
                ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
